--- a/database/f2bdb.sql.v0.1
+++ b/database/f2bdb.sql.v0.1
@@ -8,7 +8,8 @@ USE F2B_LOGS_DB;
 
 CREATE TABLE LOGS(
 	LOG_MAC VARCHAR(30),
-	LOG_DATETIME TIMESTAMP,
+	LOG_DATE DATE,
+	LOG_TIME TIME(3),
 	LOG_RESOURCE VARCHAR(50),
 	LOG_PID VARCHAR(20),
 	LOG_STATUS VARCHAR(50),
